[gd_scene load_steps=15 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://glow_env.tres" type="Environment" id=2]
[ext_resource path="res://World.gd" type="Script" id=3]
[ext_resource path="res://Images/Square.png" type="Texture" id=4]
[ext_resource path="res://Images/Squares.png" type="Texture" id=6]
[ext_resource path="res://Sounds/GameMusic.wav" type="AudioStream" id=7]
[ext_resource path="res://Images/Minimap.png" type="Texture" id=8]
[ext_resource path="res://Images/Tiles.png" type="Texture" id=9]
[ext_resource path="res://Images/PlayerMinimapIcon.png" type="Texture" id=10]
[ext_resource path="res://Minimap.gd" type="Script" id=11]
[ext_resource path="res://Images/RoomMapIcon.png" type="Texture" id=12]
[ext_resource path="res://Images/RoomConnectionMapIcon.png" type="Texture" id=13]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="TileSet" id=1]
0/name = "Square.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 0.0627451, 0.0627451, 0.0901961, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Square.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 0, 0, 1 )
1/region = Rect2( 0, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "BG"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 0.0392157, 0.0392157, 0.0588235, 1 )
2/region = Rect2( 0, 0, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "BG2"
3/texture = ExtResource( 4 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 0.0470588, 0.0470588, 0.0745098, 1 )
3/region = Rect2( 0, 0, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[node name="World" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
z_index = -4096
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 9
collision_mask = 9
format = 1

[node name="Walls" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
z_index = -4095
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 9
collision_mask = 9
format = 1

[node name="MapNode" type="Node2D" parent="."]
scale = Vector2( 5, 5 )

[node name="RoomAreas" type="Node2D" parent="."]

[node name="ConnectionNodes" type="Node2D" parent="."]
scale = Vector2( 5, 5 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 512, 300 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
motion_mirroring = Vector2( 1024, 600 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 512, 300 )
scale = Vector2( 64, 50 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 0, 19.5, 12 )

[node name="Theme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Minimap" type="MarginContainer" parent="CanvasLayer/UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -192.0
margin_right = -64.0
margin_bottom = 128.0
rect_scale = Vector2( 1.5, 1.5 )
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = -6
custom_constants/margin_bottom = -6
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/UI/Minimap"]
margin_left = -6.0
margin_top = 6.0
margin_right = 122.0
margin_bottom = 134.0
rect_pivot_offset = Vector2( 64, 64 )
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6

[node name="Grid" type="TextureRect" parent="CanvasLayer/UI/Minimap/MarginContainer"]
margin_left = 6.0
margin_top = 6.0
margin_right = 122.0
margin_bottom = 122.0
rect_pivot_offset = Vector2( 58, 58 )
rect_clip_content = true
texture = ExtResource( 9 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerMarker" type="Sprite" parent="CanvasLayer/UI/Minimap/MarginContainer"]
position = Vector2( 64, 64 )
scale = Vector2( 0.25, 0.25 )
z_index = 2
z_as_relative = false
texture = ExtResource( 10 )

[node name="Contents" type="MarginContainer" parent="CanvasLayer/UI/Minimap/MarginContainer"]
margin_left = 6.0
margin_top = 6.0
margin_right = 122.0
margin_bottom = 122.0
rect_pivot_offset = Vector2( 58, 58 )
rect_clip_content = true

[node name="RoomMarker" type="Sprite" parent="CanvasLayer/UI/Minimap/MarginContainer/Contents"]
visible = false
position = Vector2( 30, 18.6667 )
z_index = 1
texture = ExtResource( 12 )

[node name="RoomConnectionMarker" type="Sprite" parent="CanvasLayer/UI/Minimap/MarginContainer/Contents"]
visible = false
position = Vector2( 30, 18.6667 )
texture = ExtResource( 13 )

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/UI/Minimap"]
margin_left = -6.0
margin_top = 6.0
margin_right = 122.0
margin_bottom = 134.0
texture = ExtResource( 8 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
